# crewai

./: README.md
project1/: README.md  pyproject.toml
project1/src/project1/: crew.py  main.py  report.md
project2/: README.md  pyproject.toml
project2/src/project2/: crew.py  main.py  report.md
project3/: README.md  pyproject.toml
project3/src/project3/: crew.py  main.py  report.md
project3/src/project3/config/: agents.yaml  tasks.yaml
