[project]
name = "project2"
version = "0.1.0"
description = "project2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
project2 = "project2.main:run"
run_crew = "project2.main:run"
train = "project2.main:train"
replay = "project2.main:replay"
test = "project2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
