[project]
name = "project3"
version = "0.1.0"
description = "project3 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
project3 = "project3.main:run"
run_crew = "project3.main:run"
train = "project3.main:train"
replay = "project3.main:replay"
test = "project3.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
